// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.input.base.label > render basic label 1`] = `
.c0 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
}

.c0:empty {
  display: none;
}

<label
  class="c0 label field__label test-class"
  data-role="label"
  for="test-1"
  id="test-id-label"
  style="color: black;"
>
  Test Label
</label>
`;

exports[`com.mgmtp.a12.widgets.input.base.label > render disabled label 1`] = `
.c0 {
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  margin: 0px 0px 4px;
  align-self: center;
  color: rgb(169, 179, 188);
}

.c0:empty {
  display: none;
}

<label
  class="c0 label field__label label--disabled test-class"
  data-disabled="true"
  data-role="label"
  for="test-2"
  id="test-id-label"
  style="color: black;"
>
  Test Label
</label>
`;

exports[`com.mgmtp.a12.widgets.input.base.label > render hidden label 1`] = `
.c0 {
  color: rgb(77, 77, 77);
  display: inline-block;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 600;
  line-height: 1.45;
  text-transform: none;
  align-self: center;
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c0:empty {
  display: none;
}

.c0 * {
  width: 1px;
  height: 1px;
}

<label
  class="c0 label field__label -u-unseenButRead test-class"
  data-role="label"
  for="test-3"
  id="test-id-label"
  style="color: black;"
>
  Test Label
</label>
`;

exports[`com.mgmtp.a12.widgets.input.base.selection.suffix > render basic selection-suffix 1`] = `
.c1 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c1 > span {
  display: inline-block;
}

.c1.c1 {
  max-width: unset;
}

.c3 .c0 {
  font-size: 1.25rem;
}

.c2 {
  color: rgb(127, 140, 155);
  user-select: none;
  cursor: pointer;
}

<i
  aria-hidden="true"
  class="c0 c1 plasma-icon plasma-icon--big c2 test-class"
  data-role="selection-suffix"
  id="test-id"
  style="color: red;"
>
  <span
    aria-hidden="true"
  >
    expand_more
  </span>
</i>
`;

exports[`com.mgmtp.a12.widgets.input.base.selection.suffix > render disabled selection-suffix 1`] = `
.c1 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c1 > span {
  display: inline-block;
}

.c1.c1 {
  max-width: unset;
}

.c3 .c0 {
  font-size: 1.25rem;
}

.c2 {
  user-select: none;
  color: inherit;
  cursor: default;
}

<i
  aria-hidden="true"
  class="c0 c1 plasma-icon plasma-icon--big c2 test-class"
  data-role="selection-suffix"
  id="test-id"
>
  <span
    aria-hidden="true"
  >
    expand_more
  </span>
</i>
`;

exports[`com.mgmtp.a12.widgets.input.base.warning.error.and.info > render basic error 1`] = `
.c5 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c5 * {
  width: 1px;
  height: 1px;
}

.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: custom-icons;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c4.c4 {
  color: rgb(201, 29, 29);
}

.c0 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(252, 233, 233);
  color: rgb(201, 29, 29);
}

.c1 {
  display: flex;
  margin-right: 4px;
}

.c1 .c2 {
  font-size: 1.25rem;
}

.c6 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

<div
  class="c0 message message--error test-class"
  data-role="error-message"
  id="test-id-error"
  style="color: red;"
>
  <div
    class="c1 messageIcon"
  >
    <i
      class="c2 c3 c4 plasma-icon plasma-icon--error plasma-icon--custom"
      data-role="plasma-icon"
      title="Error"
    >
      <span
        aria-hidden="true"
      >
        
      </span>
      <span
        class="c5 -u-unseenButRead"
        data-role="hidden-text"
      >
        Error
      </span>
    </i>
  </div>
  <div
    class="c6 messageText"
    data-role="error-text"
  >
    Test Error
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.base.warning.error.and.info > render basic info 1`] = `
.c5 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c5 * {
  width: 1px;
  height: 1px;
}

.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c4.c4 {
  color: rgb(5, 104, 174);
}

.c0 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(230, 244, 254);
  color: rgb(5, 104, 174);
}

.c1 {
  display: flex;
  margin-right: 4px;
}

.c1 .c2 {
  font-size: 1.25rem;
}

.c6 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

<div
  class="c0 test-class"
  data-role="info-message"
  id="test-id-info"
>
  <div
    class="c1"
  >
    <i
      class="c2 c3 c4 plasma-icon plasma-icon--info"
      data-role="plasma-icon"
      title="Information"
    >
      <span
        aria-hidden="true"
      >
        info
      </span>
      <span
        class="c5 -u-unseenButRead"
        data-role="hidden-text"
      >
        Information
      </span>
    </i>
  </div>
  <div
    class="c6"
    data-role="info-text"
  >
    Test Info
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.input.base.warning.error.and.info > render basic warning 1`] = `
.c5 {
  border: 0px;
  clip: rect(0px, 0px, 0px, 0px);
  clip-path: inset(100%);
  height: 1px;
  min-height: 1px;
  overflow: hidden;
  padding: 0px;
  position: absolute;
  top: 0px;
  width: 1px;
  margin: -1px !important;
}

.c5 * {
  width: 1px;
  height: 1px;
}

.c3 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Icons";
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c3 > span {
  display: inline-block;
}

.c3.c3 {
  max-width: unset;
}

.c4.c4 {
  color: rgb(175, 121, 2);
}

.c0 {
  display: flex;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 400;
  margin: 0px 0px 4px;
  padding: 4px 8px;
  background: rgb(254, 242, 218);
  color: rgb(22, 25, 29);
}

.c1 {
  display: flex;
  margin-right: 4px;
}

.c1 .c2 {
  font-size: 1.25rem;
}

.c6 {
  align-self: center;
  max-width: calc(100% - 4px - 1.25rem);
}

<div
  class="c0 message message--warning test-class"
  data-role="warning-message"
  id="test-id-warning"
  style="color: orange;"
>
  <div
    class="c1 messageIcon"
  >
    <i
      class="c2 c3 c4 plasma-icon plasma-icon--warning"
      data-role="plasma-icon"
      title="Warning"
    >
      <span
        aria-hidden="true"
      >
        warning
      </span>
      <span
        class="c5 -u-unseenButRead"
        data-role="hidden-text"
      >
        Warning
      </span>
    </i>
  </div>
  <div
    class="c6 messageText"
    data-role="warning-text"
  >
    Test Warning
  </div>
</div>
`;
